feat: implement shared PK architecture, automated profiling and professional documentation